// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Kbd Snapshot matches snapshot for standard shortcut 1`] = `
<kbd
  class="inline-flex items-center justify-center rounded-md px-2 py-1 font-mono text-xs font-medium bg-white/8 text-(--text-1) border-[0.5px] border-white/12 shadow-sm"
>
  Cmd+K
</kbd>
`;

exports[`Kbd Snapshot matches snapshot for symbol shortcut 1`] = `
<kbd
  class="inline-flex items-center justify-center rounded-md px-2 py-1 font-mono text-xs font-medium bg-white/8 text-(--text-1) border-[0.5px] border-white/12 shadow-sm"
>
  ⌘
  K
</kbd>
`;

exports[`Kbd Snapshot matches snapshot with custom class 1`] = `
<kbd
  class="inline-flex items-center justify-center rounded-md px-2 py-1 font-mono text-xs font-medium bg-white/8 border-[0.5px] border-white/12 shadow-sm text-ember-400"
>
  Enter
</kbd>
`;
